fix(client): :lipstick: align text left in tooltip

--- a/client/src/components/Pages/dispositif/Edition/ChoiceButton/ChoiceButton.module.scss
+++ b/client/src/components/Pages/dispositif/Edition/ChoiceButton/ChoiceButton.module.scss
@@ -67,3 +67,9 @@
     }
   }
 }
+
+.tooltip {
+  :global(.tooltip-inner) {
+    text-align: left;
+  }
+}
